src/F/fullfomsub/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term
   4          | UCID TyBinder
   5          | LCID Binder
   6          | LCURLY UCID COMMA LCID RCURLY EQ Term

   7  Binder : COLON Type
   8         | EQ Term

   9  PathTerm : PathTerm DOT LCID
  10           | PathTerm DOT INTV
  11           | AscribeTerm

  12  AscribeTerm : ATerm AS Type
  13              | ATerm

  14  TermSeq : Term
  15          | Term SEMI TermSeq

  16  Kind : ArrowKind

  17  OType :
  18        | LEQ Type
  19        | COLONCOLON Kind

  20  ArrowKind : AKind DARROW ArrowKind
  21            | AKind

  22  Type : ArrowType
  23       | ALL UCID OType DOT Type
  24       | LAMBDA UCID OKind DOT Type

  25  AType : LPAREN Type RPAREN
  26        | UCID
  27        | TTOP
  28        | BOOL
  29        | LCURLY FieldTypes RCURLY
  30        | USTRING
  31        | UUNIT
  32        | UFLOAT
  33        | NAT
  34        | LCURLY SOME UCID OType COMMA Type RCURLY
  35        | TTOP LSQUARE Kind RSQUARE

  36  ArrowType : AppType ARROW ArrowType
  37            | AppType

  38  Term : AppTerm
  39       | LAMBDA LCID COLON Type DOT Term
  40       | LAMBDA USCORE COLON Type DOT Term
  41       | IF Term THEN Term ELSE Term
  42       | LET LCID EQ Term IN Term
  43       | LET USCORE EQ Term IN Term
  44       | LETREC LCID COLON Type EQ Term IN Term
  45       | LAMBDA UCID OType DOT Term
  46       | LET LCURLY UCID COMMA LCID RCURLY EQ Term IN Term

  47  AppTerm : PathTerm
  48          | AppTerm PathTerm
  49          | FIX PathTerm
  50          | TIMESFLOAT PathTerm PathTerm
  51          | AppTerm LSQUARE Type RSQUARE
  52          | SUCC PathTerm
  53          | PRED PathTerm
  54          | ISZERO PathTerm

  55  ATerm : LPAREN TermSeq RPAREN
  56        | INERT LSQUARE Type RSQUARE
  57        | LCID
  58        | TRUE
  59        | FALSE
  60        | LCURLY Fields RCURLY
  61        | STRINGV
  62        | UNIT
  63        | FLOATV
  64        | INTV
  65        | LCURLY STAR Type COMMA Term RCURLY AS Type

  66  Fields :
  67         | NEFields

  68  NEFields : Field
  69           | Field COMMA NEFields

  70  Field : LCID EQ Term
  71        | Term

  72  FieldTypes :
  73             | NEFieldTypes

  74  NEFieldTypes : FieldType
  75               | FieldType COMMA NEFieldTypes

  76  FieldType : LCID COLON Type
  77            | Type

  78  AKind : STAR
  79        | LPAREN Kind RPAREN

  80  OKind :
  81        | COLONCOLON Kind

  82  AppType : AppType AType
  83          | AType

  84  TyAbbArgs :
  85            | UCID OKind TyAbbArgs

  86  TyBinder :
  87           | LEQ Type
  88           | COLONCOLON Kind
  89           | TyAbbArgs EQ Type

  90  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (90)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	UCID  shift 16
	LCID  shift 17
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	EOF  shift 21
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	toplevel  goto 24
	Command  goto 25
	Term  goto 26
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	AppTerm  goto 30


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ATerm : INERT . LSQUARE Type RSQUARE  (56)

	LSQUARE  shift 31
	.  error


state 4
	Term : LAMBDA . LCID COLON Type DOT Term  (39)
	Term : LAMBDA . USCORE COLON Type DOT Term  (40)
	Term : LAMBDA . UCID OType DOT Term  (45)

	UCID  shift 32
	LCID  shift 33
	USCORE  shift 34
	.  error


state 5
	Term : IF . Term THEN Term ELSE Term  (41)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	Term  goto 37
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	AppTerm  goto 30


state 6
	ATerm : TRUE .  (58)

	.  reduce 58


state 7
	ATerm : FALSE .  (59)

	.  reduce 59


state 8
	AppTerm : FIX . PathTerm  (49)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 10
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	PathTerm  goto 38
	AscribeTerm  goto 28
	ATerm  goto 29


state 9
	Term : LETREC . LCID COLON Type EQ Term IN Term  (44)

	LCID  shift 39
	.  error


state 10
	ATerm : UNIT .  (62)

	.  reduce 62


state 11
	AppTerm : TIMESFLOAT . PathTerm PathTerm  (50)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 10
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	PathTerm  goto 40
	AscribeTerm  goto 28
	ATerm  goto 29


state 12
	AppTerm : SUCC . PathTerm  (52)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 10
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	PathTerm  goto 41
	AscribeTerm  goto 28
	ATerm  goto 29


state 13
	AppTerm : PRED . PathTerm  (53)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 10
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	PathTerm  goto 42
	AscribeTerm  goto 28
	ATerm  goto 29


state 14
	AppTerm : ISZERO . PathTerm  (54)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 10
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	PathTerm  goto 43
	AscribeTerm  goto 28
	ATerm  goto 29


state 15
	Term : LET . LCID EQ Term IN Term  (42)
	Term : LET . USCORE EQ Term IN Term  (43)
	Term : LET . LCURLY UCID COMMA LCID RCURLY EQ Term IN Term  (46)

	LCID  shift 44
	LCURLY  shift 45
	USCORE  shift 46
	.  error


state 16
	Command : UCID . TyBinder  (4)
	TyAbbArgs : .  (84)
	TyBinder : .  (86)

	LEQ  shift 47
	UCID  shift 48
	COLONCOLON  shift 49
	EQ  reduce 84
	SEMI  reduce 86

	TyBinder  goto 50
	TyAbbArgs  goto 51


state 17
	Command : LCID . Binder  (5)
	ATerm : LCID .  (57)

	COLON  shift 52
	EQ  shift 53
	INERT  reduce 57
	TRUE  reduce 57
	FALSE  reduce 57
	UNIT  reduce 57
	AS  reduce 57
	LCID  reduce 57
	INTV  reduce 57
	FLOATV  reduce 57
	STRINGV  reduce 57
	DOT  reduce 57
	LCURLY  reduce 57
	LPAREN  reduce 57
	LSQUARE  reduce 57
	SEMI  reduce 57

	Binder  goto 54


state 18
	ATerm : INTV .  (64)

	.  reduce 64


state 19
	ATerm : FLOATV .  (63)

	.  reduce 63


state 20
	ATerm : STRINGV .  (61)

	.  reduce 61


state 21
	toplevel : EOF .  (1)

	.  reduce 1


state 22
	Command : LCURLY . UCID COMMA LCID RCURLY EQ Term  (6)
	ATerm : LCURLY . Fields RCURLY  (60)
	ATerm : LCURLY . STAR Type COMMA Term RCURLY AS Type  (65)
	Fields : .  (66)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	UCID  shift 55
	LCID  shift 56
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	STAR  shift 57
	RCURLY  reduce 66

	Term  goto 58
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	AppTerm  goto 30
	Fields  goto 59
	NEFields  goto 60
	Field  goto 61


state 23
	ATerm : LPAREN . TermSeq RPAREN  (55)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	Term  goto 62
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	TermSeq  goto 63
	AppTerm  goto 30


state 24
	%entry% : '\001' toplevel .  (90)

	.  reduce 90


state 25
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 64
	.  error


state 26
	Command : Term .  (3)

	.  reduce 3


state 27
	PathTerm : PathTerm . DOT LCID  (9)
	PathTerm : PathTerm . DOT INTV  (10)
	AppTerm : PathTerm .  (47)

	DOT  shift 65
	INERT  reduce 47
	THEN  reduce 47
	ELSE  reduce 47
	TRUE  reduce 47
	FALSE  reduce 47
	UNIT  reduce 47
	IN  reduce 47
	LCID  reduce 47
	INTV  reduce 47
	FLOATV  reduce 47
	STRINGV  reduce 47
	COMMA  reduce 47
	LCURLY  reduce 47
	LPAREN  reduce 47
	LSQUARE  reduce 47
	RCURLY  reduce 47
	RPAREN  reduce 47
	SEMI  reduce 47


state 28
	PathTerm : AscribeTerm .  (11)

	.  reduce 11


state 29
	AscribeTerm : ATerm . AS Type  (12)
	AscribeTerm : ATerm .  (13)

	AS  shift 66
	INERT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	TRUE  reduce 13
	FALSE  reduce 13
	UNIT  reduce 13
	IN  reduce 13
	LCID  reduce 13
	INTV  reduce 13
	FLOATV  reduce 13
	STRINGV  reduce 13
	COMMA  reduce 13
	DOT  reduce 13
	LCURLY  reduce 13
	LPAREN  reduce 13
	LSQUARE  reduce 13
	RCURLY  reduce 13
	RPAREN  reduce 13
	SEMI  reduce 13


state 30
	Term : AppTerm .  (38)
	AppTerm : AppTerm . PathTerm  (48)
	AppTerm : AppTerm . LSQUARE Type RSQUARE  (51)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 10
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	LSQUARE  shift 67
	THEN  reduce 38
	ELSE  reduce 38
	IN  reduce 38
	COMMA  reduce 38
	RCURLY  reduce 38
	RPAREN  reduce 38
	SEMI  reduce 38

	PathTerm  goto 68
	AscribeTerm  goto 28
	ATerm  goto 29


state 31
	ATerm : INERT LSQUARE . Type RSQUARE  (56)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 80
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 32
	Term : LAMBDA UCID . OType DOT Term  (45)
	OType : .  (17)

	LEQ  shift 84
	COLONCOLON  shift 85
	DOT  reduce 17

	OType  goto 86


state 33
	Term : LAMBDA LCID . COLON Type DOT Term  (39)

	COLON  shift 87
	.  error


state 34
	Term : LAMBDA USCORE . COLON Type DOT Term  (40)

	COLON  shift 88
	.  error


state 35
	ATerm : LCID .  (57)

	.  reduce 57


state 36
	ATerm : LCURLY . Fields RCURLY  (60)
	ATerm : LCURLY . STAR Type COMMA Term RCURLY AS Type  (65)
	Fields : .  (66)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	LCID  shift 56
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	STAR  shift 57
	RCURLY  reduce 66

	Term  goto 58
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	AppTerm  goto 30
	Fields  goto 59
	NEFields  goto 60
	Field  goto 61


state 37
	Term : IF Term . THEN Term ELSE Term  (41)

	THEN  shift 89
	.  error


state 38
	PathTerm : PathTerm . DOT LCID  (9)
	PathTerm : PathTerm . DOT INTV  (10)
	AppTerm : FIX PathTerm .  (49)

	DOT  shift 65
	INERT  reduce 49
	THEN  reduce 49
	ELSE  reduce 49
	TRUE  reduce 49
	FALSE  reduce 49
	UNIT  reduce 49
	IN  reduce 49
	LCID  reduce 49
	INTV  reduce 49
	FLOATV  reduce 49
	STRINGV  reduce 49
	COMMA  reduce 49
	LCURLY  reduce 49
	LPAREN  reduce 49
	LSQUARE  reduce 49
	RCURLY  reduce 49
	RPAREN  reduce 49
	SEMI  reduce 49


state 39
	Term : LETREC LCID . COLON Type EQ Term IN Term  (44)

	COLON  shift 90
	.  error


state 40
	PathTerm : PathTerm . DOT LCID  (9)
	PathTerm : PathTerm . DOT INTV  (10)
	AppTerm : TIMESFLOAT PathTerm . PathTerm  (50)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 10
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	DOT  shift 65
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	PathTerm  goto 91
	AscribeTerm  goto 28
	ATerm  goto 29


state 41
	PathTerm : PathTerm . DOT LCID  (9)
	PathTerm : PathTerm . DOT INTV  (10)
	AppTerm : SUCC PathTerm .  (52)

	DOT  shift 65
	INERT  reduce 52
	THEN  reduce 52
	ELSE  reduce 52
	TRUE  reduce 52
	FALSE  reduce 52
	UNIT  reduce 52
	IN  reduce 52
	LCID  reduce 52
	INTV  reduce 52
	FLOATV  reduce 52
	STRINGV  reduce 52
	COMMA  reduce 52
	LCURLY  reduce 52
	LPAREN  reduce 52
	LSQUARE  reduce 52
	RCURLY  reduce 52
	RPAREN  reduce 52
	SEMI  reduce 52


state 42
	PathTerm : PathTerm . DOT LCID  (9)
	PathTerm : PathTerm . DOT INTV  (10)
	AppTerm : PRED PathTerm .  (53)

	DOT  shift 65
	INERT  reduce 53
	THEN  reduce 53
	ELSE  reduce 53
	TRUE  reduce 53
	FALSE  reduce 53
	UNIT  reduce 53
	IN  reduce 53
	LCID  reduce 53
	INTV  reduce 53
	FLOATV  reduce 53
	STRINGV  reduce 53
	COMMA  reduce 53
	LCURLY  reduce 53
	LPAREN  reduce 53
	LSQUARE  reduce 53
	RCURLY  reduce 53
	RPAREN  reduce 53
	SEMI  reduce 53


state 43
	PathTerm : PathTerm . DOT LCID  (9)
	PathTerm : PathTerm . DOT INTV  (10)
	AppTerm : ISZERO PathTerm .  (54)

	DOT  shift 65
	INERT  reduce 54
	THEN  reduce 54
	ELSE  reduce 54
	TRUE  reduce 54
	FALSE  reduce 54
	UNIT  reduce 54
	IN  reduce 54
	LCID  reduce 54
	INTV  reduce 54
	FLOATV  reduce 54
	STRINGV  reduce 54
	COMMA  reduce 54
	LCURLY  reduce 54
	LPAREN  reduce 54
	LSQUARE  reduce 54
	RCURLY  reduce 54
	RPAREN  reduce 54
	SEMI  reduce 54


state 44
	Term : LET LCID . EQ Term IN Term  (42)

	EQ  shift 92
	.  error


state 45
	Term : LET LCURLY . UCID COMMA LCID RCURLY EQ Term IN Term  (46)

	UCID  shift 93
	.  error


state 46
	Term : LET USCORE . EQ Term IN Term  (43)

	EQ  shift 94
	.  error


state 47
	TyBinder : LEQ . Type  (87)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 95
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 48
	TyAbbArgs : UCID . OKind TyAbbArgs  (85)
	OKind : .  (80)

	COLONCOLON  shift 96
	UCID  reduce 80
	EQ  reduce 80

	OKind  goto 97


state 49
	TyBinder : COLONCOLON . Kind  (88)

	LPAREN  shift 98
	STAR  shift 99
	.  error

	Kind  goto 100
	ArrowKind  goto 101
	AKind  goto 102


state 50
	Command : UCID TyBinder .  (4)

	.  reduce 4


state 51
	TyBinder : TyAbbArgs . EQ Type  (89)

	EQ  shift 103
	.  error


state 52
	Binder : COLON . Type  (7)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 104
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 53
	Binder : EQ . Term  (8)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	Term  goto 105
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	AppTerm  goto 30


state 54
	Command : LCID Binder .  (5)

	.  reduce 5


state 55
	Command : LCURLY UCID . COMMA LCID RCURLY EQ Term  (6)

	COMMA  shift 106
	.  error


state 56
	ATerm : LCID .  (57)
	Field : LCID . EQ Term  (70)

	EQ  shift 107
	INERT  reduce 57
	TRUE  reduce 57
	FALSE  reduce 57
	UNIT  reduce 57
	AS  reduce 57
	LCID  reduce 57
	INTV  reduce 57
	FLOATV  reduce 57
	STRINGV  reduce 57
	COMMA  reduce 57
	DOT  reduce 57
	LCURLY  reduce 57
	LPAREN  reduce 57
	LSQUARE  reduce 57
	RCURLY  reduce 57


state 57
	ATerm : LCURLY STAR . Type COMMA Term RCURLY AS Type  (65)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 108
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 58
	Field : Term .  (71)

	.  reduce 71


state 59
	ATerm : LCURLY Fields . RCURLY  (60)

	RCURLY  shift 109
	.  error


state 60
	Fields : NEFields .  (67)

	.  reduce 67


state 61
	NEFields : Field .  (68)
	NEFields : Field . COMMA NEFields  (69)

	COMMA  shift 110
	RCURLY  reduce 68


state 62
	TermSeq : Term .  (14)
	TermSeq : Term . SEMI TermSeq  (15)

	SEMI  shift 111
	RPAREN  reduce 14


state 63
	ATerm : LPAREN TermSeq . RPAREN  (55)

	RPAREN  shift 112
	.  error


state 64
	toplevel : Command SEMI . toplevel  (2)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	UCID  shift 16
	LCID  shift 17
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	EOF  shift 21
	LCURLY  shift 22
	LPAREN  shift 23
	.  error

	toplevel  goto 113
	Command  goto 25
	Term  goto 26
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	AppTerm  goto 30


state 65
	PathTerm : PathTerm DOT . LCID  (9)
	PathTerm : PathTerm DOT . INTV  (10)

	LCID  shift 114
	INTV  shift 115
	.  error


state 66
	AscribeTerm : ATerm AS . Type  (12)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 116
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 67
	AppTerm : AppTerm LSQUARE . Type RSQUARE  (51)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 117
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 68
	PathTerm : PathTerm . DOT LCID  (9)
	PathTerm : PathTerm . DOT INTV  (10)
	AppTerm : AppTerm PathTerm .  (48)

	DOT  shift 65
	INERT  reduce 48
	THEN  reduce 48
	ELSE  reduce 48
	TRUE  reduce 48
	FALSE  reduce 48
	UNIT  reduce 48
	IN  reduce 48
	LCID  reduce 48
	INTV  reduce 48
	FLOATV  reduce 48
	STRINGV  reduce 48
	COMMA  reduce 48
	LCURLY  reduce 48
	LPAREN  reduce 48
	LSQUARE  reduce 48
	RCURLY  reduce 48
	RPAREN  reduce 48
	SEMI  reduce 48


state 69
	Type : LAMBDA . UCID OKind DOT Type  (24)

	UCID  shift 118
	.  error


70: shift/reduce conflict (shift 119, reduce 27) on LSQUARE
state 70
	AType : TTOP .  (27)
	AType : TTOP . LSQUARE Kind RSQUARE  (35)

	LSQUARE  shift 119
	INERT  reduce 27
	TTOP  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	TRUE  reduce 27
	FALSE  reduce 27
	BOOL  reduce 27
	USTRING  reduce 27
	UNIT  reduce 27
	UUNIT  reduce 27
	UFLOAT  reduce 27
	NAT  reduce 27
	IN  reduce 27
	AS  reduce 27
	UCID  reduce 27
	LCID  reduce 27
	INTV  reduce 27
	FLOATV  reduce 27
	STRINGV  reduce 27
	ARROW  reduce 27
	COMMA  reduce 27
	DOT  reduce 27
	EQ  reduce 27
	LCURLY  reduce 27
	LPAREN  reduce 27
	RCURLY  reduce 27
	RPAREN  reduce 27
	RSQUARE  reduce 27
	SEMI  reduce 27


state 71
	AType : BOOL .  (28)

	.  reduce 28


state 72
	AType : USTRING .  (30)

	.  reduce 30


state 73
	AType : UUNIT .  (31)

	.  reduce 31


state 74
	AType : UFLOAT .  (32)

	.  reduce 32


state 75
	Type : ALL . UCID OType DOT Type  (23)

	UCID  shift 120
	.  error


state 76
	AType : NAT .  (33)

	.  reduce 33


state 77
	AType : UCID .  (26)

	.  reduce 26


state 78
	AType : LCURLY . FieldTypes RCURLY  (29)
	AType : LCURLY . SOME UCID OType COMMA Type RCURLY  (34)
	FieldTypes : .  (72)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	SOME  shift 121
	UCID  shift 77
	LCID  shift 122
	LCURLY  shift 78
	LPAREN  shift 79
	RCURLY  reduce 72

	Type  goto 123
	ArrowType  goto 81
	AType  goto 82
	FieldTypes  goto 124
	AppType  goto 83
	NEFieldTypes  goto 125
	FieldType  goto 126


state 79
	AType : LPAREN . Type RPAREN  (25)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 127
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 80
	ATerm : INERT LSQUARE Type . RSQUARE  (56)

	RSQUARE  shift 128
	.  error


state 81
	Type : ArrowType .  (22)

	.  reduce 22


state 82
	AppType : AType .  (83)

	.  reduce 83


83: shift/reduce conflict (shift 78, reduce 37) on LCURLY
83: shift/reduce conflict (shift 79, reduce 37) on LPAREN
state 83
	ArrowType : AppType . ARROW ArrowType  (36)
	ArrowType : AppType .  (37)
	AppType : AppType . AType  (82)

	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	NAT  shift 76
	UCID  shift 77
	ARROW  shift 129
	LCURLY  shift 78
	LPAREN  shift 79
	INERT  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	TRUE  reduce 37
	FALSE  reduce 37
	UNIT  reduce 37
	IN  reduce 37
	AS  reduce 37
	LCID  reduce 37
	INTV  reduce 37
	FLOATV  reduce 37
	STRINGV  reduce 37
	COMMA  reduce 37
	DOT  reduce 37
	EQ  reduce 37
	LSQUARE  reduce 37
	RCURLY  reduce 37
	RPAREN  reduce 37
	RSQUARE  reduce 37
	SEMI  reduce 37

	AType  goto 130


state 84
	OType : LEQ . Type  (18)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 131
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 85
	OType : COLONCOLON . Kind  (19)

	LPAREN  shift 98
	STAR  shift 99
	.  error

	Kind  goto 132
	ArrowKind  goto 101
	AKind  goto 102


state 86
	Term : LAMBDA UCID OType . DOT Term  (45)

	DOT  shift 133
	.  error


state 87
	Term : LAMBDA LCID COLON . Type DOT Term  (39)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 134
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 88
	Term : LAMBDA USCORE COLON . Type DOT Term  (40)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 135
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 89
	Term : IF Term THEN . Term ELSE Term  (41)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	Term  goto 136
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	AppTerm  goto 30


state 90
	Term : LETREC LCID COLON . Type EQ Term IN Term  (44)

	LAMBDA  shift 69
	TTOP  shift 70
	BOOL  shift 71
	USTRING  shift 72
	UUNIT  shift 73
	UFLOAT  shift 74
	ALL  shift 75
	NAT  shift 76
	UCID  shift 77
	LCURLY  shift 78
	LPAREN  shift 79
	.  error

	Type  goto 137
	ArrowType  goto 81
	AType  goto 82
	AppType  goto 83


state 91
	PathTerm : PathTerm . DOT LCID  (9)
	PathTerm : PathTerm . DOT INTV  (10)
	AppTerm : TIMESFLOAT PathTerm PathTerm .  (50)

	DOT  shift 65
	INERT  reduce 50
	THEN  reduce 50
	ELSE  reduce 50
	TRUE  reduce 50
	FALSE  reduce 50
	UNIT  reduce 50
	IN  reduce 50
	LCID  reduce 50
	INTV  reduce 50
	FLOATV  reduce 50
	STRINGV  reduce 50
	COMMA  reduce 50
	LCURLY  reduce 50
	LPAREN  reduce 50
	LSQUARE  reduce 50
	RCURLY  reduce 50
	RPAREN  reduce 50
	SEMI  reduce 50


state 92
	Term : LET LCID EQ . Term IN Term  (42)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	FIX  shift 8
	LETREC  shift 9
	UNIT  shift 10
	TIMESFLOAT  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	LET  shift 15
	LCID  shift 35
	INTV  shift 18
	FLOATV  shift 19
	STRINGV  shift 20
	LCURLY  shift 36
	LPAREN  shift 23
	.  error

	Term  goto 138
	PathTerm  goto 27
	AscribeTerm  goto 28
	ATerm  goto 29
	AppTerm  goto 30

